--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf _site",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:eleventy": "npx @11ty/eleventy --serve",
+    "dev": "npm-run-all clean --parallel dev:* --print-label",
     "debug": "DEBUG=Eleventy* npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "Dennis Ostendorf",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0"
+    "@11ty/eleventy": "1.0.0",
+    "npm-run-all": "4.1.5"
   }
 }
