--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "1.0.0",
-    "npm-run-all": "4.1.5"
+    "npm-run-all": "4.1.5",
+    "tailwindcss": "3.0.23"
   }
 }
