--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -rf _site",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:eleventy": "npx @11ty/eleventy --serve",
+    "dev:css": "npx tailwindcss -i ./src/assets/css/tailwind.css -c tailwind.config.js -o ./_site/style.css --watch",
     "dev": "npm-run-all clean --parallel dev:* --print-label",
     "debug": "DEBUG=Eleventy* npx @11ty/eleventy"
   },
@@ -15,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "1.0.0",
+    "@tailwindcss/typography": "0.5.2",
     "npm-run-all": "4.1.5",
     "tailwindcss": "3.0.23"
   }
