--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@11ty/eleventy": "1.0.0",
     "@tailwindcss/typography": "0.5.2",
+    "cypress": "9.5.1",
     "npm-run-all": "4.1.5",
     "tailwindcss": "3.0.23"
   }
