--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf _site",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev:eleventy": "npx @11ty/eleventy --serve",
     "dev:css": "npx tailwindcss -i ./src/assets/css/tailwind.css -c tailwind.config.js -o ./_site/style.css --watch",
     "dev": "npm-run-all clean --parallel dev:* --print-label",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
+    "test": "start-server-and-test dev http://localhost:8080 cypress:run",
+    "test:watch": "start-server-and-test dev http://localhost:8080 cypress:open",
     "debug": "DEBUG=Eleventy* npx @11ty/eleventy"
   },
   "keywords": [],
@@ -17,8 +20,10 @@
   "devDependencies": {
     "@11ty/eleventy": "1.0.0",
     "@tailwindcss/typography": "0.5.2",
+    "@testing-library/cypress": "8.0.2",
     "cypress": "9.5.1",
     "npm-run-all": "4.1.5",
+    "start-server-and-test": "1.14.0",
     "tailwindcss": "3.0.23"
   }
 }
