build: add build scripts

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf _site",
-    "dev:eleventy": "npx @11ty/eleventy --serve",
+    "dev:eleventy": "npx @11ty/eleventy --serve --quiet",
     "dev:css": "npx tailwindcss -i ./src/assets/css/tailwind.css -c tailwind.config.js -o ./_site/style.css --watch",
     "dev": "npm-run-all clean --parallel dev:* --print-label",
+    "build:eleventy": "npx @11ty/eleventy",
+    "build:css": "npx tailwindcss -i ./src/assets/css/tailwind.css -c tailwind.config.js -o ./_site/style.css",
+    "build": "run-s clean build:css build:eleventy --print-label",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
     "test": "start-server-and-test dev http://localhost:8080 cypress:run",
