--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "html-minifier": "4.0.0",
     "npm-run-all": "4.1.5",
     "start-server-and-test": "1.14.0",
-    "tailwindcss": "3.0.23",
-    "terser": "5.12.1"
+    "tailwindcss": "3.0.23"
   }
 }
