--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "npm-run-all clean --parallel dev:* --print-label",
     "build:eleventy": "npx @11ty/eleventy",
     "build:css": "npx tailwindcss -i ./src/assets/css/tailwind.css -c tailwind.config.js -o ./_site/style.css -m",
-    "build": "run-s clean build:css build:eleventy --print-label",
+    "build:js": "uglifyjs-folder ./src/assets/js --config-file 'uglify.config.json' -x '.js' --output ./_site/assets/js -e",
+    "build": "run-s clean build:css build:eleventy build:js --print-label",
     "start": "npx @11ty/eleventy --serve --quiet",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
@@ -29,6 +30,7 @@
     "html-minifier": "4.0.0",
     "npm-run-all": "4.1.5",
     "start-server-and-test": "1.14.0",
-    "tailwindcss": "3.0.23"
+    "tailwindcss": "3.0.23",
+    "uglifyjs-folder": "3.0.0"
   }
 }
