--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Build static site
+        run: npm run build
       - name: Run Lighthouse against a static dist dir
         uses: treosh/lighthouse-ci-action@v9
         with:
           # no urls needed, since it uses local folder to scan .html files
-          build: npm run build
-          start: npm start
           configPath: './lighthouserc.json'
