--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,18 @@
     X-XSS-Protection = "0"
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = "default-src 'none'; connect-src 'self';form-action 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de https://i.ytimg.com; base-uri 'self'; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none'; frame-src youtube.com www.youtube.com www.youtube-nocookie.com;"
-    
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
+
+  # optional, fails build when a category is below a threshold
+  [plugins.inputs.thresholds]
+    performance = 0.9
+    accessibility = 0.9
+    best-practices = 0.9
+    seo = 0.9
+    pwa = 0.9
+
+  # optional, deploy the lighthouse report to a path under your site
+  [plugins.inputs]
+    output_path = "reports/lighthouse.html"
