--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -20,3 +20,8 @@ jobs:
         with:
           # no urls needed, since it uses local folder to scan .html files
           configPath: './lighthouserc.json'
+      - name: Save results
+        uses: actions/upload-artifact@v1
+        with:
+          name: lighthouse-results
+          path: '.lighthouseci' # This will save the Lighthouse results as .json files
