--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,6 +11,18 @@
   "commitConvention": "angular",
   "contributors": [
     {
+      "login": "dnsos",
+      "name": "Dennis Ostendorf",
+      "avatar_url": "https://avatars.githubusercontent.com/u/15640196?v=4",
+      "profile": "https://github.com/dnsos",
+      "contributions": [
+        "code",
+        "design",
+        "content",
+        "doc"
+      ]
+    },
+    {
       "login": "vogelino",
       "name": "Lucas Vogel",
       "avatar_url": "https://avatars.githubusercontent.com/u/2759340?v=4",
@@ -21,13 +33,13 @@
       ]
     },
     {
-      "login": "dnsos",
-      "name": "Dennis Ostendorf",
-      "avatar_url": "https://avatars.githubusercontent.com/u/15640196?v=4",
-      "profile": "https://github.com/dnsos",
+      "login": "Lisa-Stubert",
+      "name": "Lisa-Stubert",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61182572?v=4",
+      "profile": "https://github.com/Lisa-Stubert",
       "contributions": [
-        "code",
-        "doc"
+        "content",
+        "code"
       ]
     }
   ],
