docs: fix typo in repo name in .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "service-agentinen",
+  "projectName": "service-agentinnen",
   "projectOwner": "technologiestiftung",
   "repoType": "github",
   "repoHost": "https://github.com",
