--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
     X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "0"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy = "default-src 'none'; connect-src 'self';form-action 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de; base-uri 'self'; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none'; media-src 'self';"
+    Content-Security-Policy = "default-src 'none'; connect-src 'self' https://piwik.technologiestiftung-berlin.de;form-action 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de; base-uri 'self'; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none'; media-src 'self';"
